--- a/Infinity Scroll/index.html
+++ b/Infinity Scroll/index.html
@@ -15,11 +15,9 @@
     </div>
     <!-- Image Container -->
     <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1601293058843-f34e8dd9ccfd?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-        <img src="https://images.unsplash.com/photo-1601293058843-f34e8dd9ccfd?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
 
     </div>
     <!-- Script -->
-    <script>src="script.js"</script>
+    <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
