--- a/Picture in Picture/index.html
+++ b/Picture in Picture/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Picture In Picture</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
+
+    <!-- Video -->
+    <video  id="video" controls height="360" width="640" ></video>
+    <!-- Button -->
+    <div class="button-container">
+        <button id="button">START</button>
+    </div>
     
 
     <!-- Script -->
-    <script>src="script.js"</script>
+    <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
